tests/paczka1/fuzzy1/25493123.err
Error in line 2: Vxj6muayd A581 80,5
Error in line 5: 7Za S825 809,2
Error in line 12: 7Za A33 46,3
Error in line 9: Vxj6muayd S682 10,2
Error in line 20: u8zoMfVvE S825 50,4
Error in line 21: u8zoMfVvE A33 54,5
Error in line 26: A33 S825 67,5
Error in line 1: WtLGNXl S682 50,3
Error in line 25: Vxj6muayd A33 56,8
